# syncthingers

./: .gitignore  Cargo.toml  LICENSE  ProjectPlanSummary.txt  README.md  TODO.md  build.rs  configuration.json  create_icons.ps1  create_icons2.ps1
assets/: app.manifest
docs/: config_update.md  process.md  tray_ui.md  user_directory.md
src/: app_dirs.rs  app_state.rs  config.rs  error_handling.rs  logger.rs  logging.rs  main.rs  process.rs  process_monitor.rs  single_instance.rs  singleton.rs  tray_ui.rs  utils.rs
src/config/: mod.rs
src/error/: mod.rs
src/process/: mod.rs
src/singleton/: mod.rs
src/tray/: mod.rs
