[package]
name = "syncthingers"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
opener = "0.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
thiserror = "2.0.12"
tray-item = "0.10.0"
winapi = { version = "0.3.9", features = ["winuser", "synchapi", "errhandlingapi",  "handleapi", "minwindef", "winerror", "jobapi2", "handleapi", "winbase", "processthreadsapi"] }

[build-dependencies]
winres = "0.1"
