[package]
name = "syncthingers"
version = "0.5.0"
edition = "2024"

[dependencies]
log = "0.4.27"
opener = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
thiserror = "2.0.12"
tray-item = "0.10.0"
winapi = { version = "0.3.9", features = ["winuser", "synchapi", "errhandlingapi", "handleapi", "minwindef", "winerror", "jobapi2", "winbase", "processthreadsapi"] }
dirs = "6.0.0"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.20.0"
