[package]
name = "syncthingers"
version = "0.7.1"
edition = "2024"
authors = ["Asko Eronen"]

[dependencies]
log = "0.4.27"
opener = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simplelog = "0.12.2"
thiserror = "2.0.16"
tray-item = "0.10.0"
winapi = { version = "0.3.9", features = [
    "winuser",
    "synchapi",
    "errhandlingapi",
    "handleapi",
    "minwindef",
    "winerror",
] }
dirs = "6.0.0"
sysinfo = "0.37.0"
winreg = "0.55.0"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
tempfile = "3.21.0"
